fix: book-appointment, counter-area align

--- a/css/style.css
+++ b/css/style.css
@@ -6244,7 +6244,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .fun-fact-box {
-    padding: 24px;
+    padding: 37px;
     padding-top: 0;
   }
 }
@@ -6483,6 +6483,16 @@ body.admin-bar .header-menu-area.sticky_menu {
 .book-appointment-area .elementor-container .book-appointment-btn {
   margin-right: 0;
   height: 100% !important;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .book-appointment-area .elementor-container .book-appointment-btn {
+    margin-top: 10px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .book-appointment-area .elementor-container .book-appointment-btn .elementor-align-right {
+    text-align: start;
+  }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .book-appointment-area .elementor-container .book-appointment-btn {
@@ -11749,7 +11759,7 @@ ul.children {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .service-area-slider .service-slider-wrapper {
-    padding: 20px 0 20px 0;
+    padding-top: 20px;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
