--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -8,7 +8,7 @@
     }
     .service-slider-wrapper {
         @include sm {
-            padding: 20px 0 20px 0;
+            padding-top: 20px;
         }
     }
     .service-single-item {
